feat: add refs from Roleo

--- a/mtrf.bib
+++ b/mtrf.bib
@@ -1,17 +1,13 @@
+------------------------
+Roleo 2016
+------------------------
+
 @inproceedings{van2014neural,
   title={A neural network approach to selectional preference acquisition},
   author={Van de Cruys, Tim},
   booktitle={Proceedings of the 2014 Conference on Empirical Methods in Natural Language Processing (EMNLP)},
   pages={26--35},
   year={2014}
-}
-
-@inproceedings{mikolov2013distributed,
-  title={Distributed representations of words and phrases and their compositionality},
-  author={Mikolov, Tomas and Sutskever, Ilya and Chen, Kai and Corrado, Greg S and Dean, Jeff},
-  booktitle={Advances in neural information processing systems},
-  pages={3111--3119},
-  year={2013}
 }
 
 @InProceedings{konstas-keller:2015:ACL-IJCNLP,
@@ -26,12 +22,12 @@
   url       = {http://www.aclweb.org/anthology/P15-1115}
 }
 
-
 @article{grissom2014don,
   title={Don’t Until the Final Verb Wait: Reinforcement Learning for Simultaneous Machine Translation},
   author={Grissom II, Alvin C and Boyd-Graber, Jordan and Boyd, Jordan and He, He and Morgan, John and Daum{\'e} III, Hal},
   year={2014}
 }
+
 @article{tan2012scalable,
   title={A scalable distributed syntactic, semantic, and lexical language model},
   author={Tan, Ming and Zhou, Wenli and Zheng, Lei and Wang, Shaojun},
@@ -42,6 +38,7 @@
   year={2012},
   publisher={MIT Press}
 }
+
 @article{hitchcock1927expression,
   title={The expression of a tensor or a polyadic as a sum of products},
   journal={Journal of Mathematics and Physics},
@@ -50,6 +47,7 @@
   number={6},
   pages={164–-189}
 }
+
 @inproceedings{chelba1998exploiting,
   title={Exploiting syntactic structure for language modeling},
   author={Chelba, Ciprian and Jelinek, Frederick},
@@ -129,19 +127,7 @@
   year={2011},
   publisher={JMLR. org}
 }
-@article{he2015delving,
-  title={Delving deep into rectifiers: Surpassing human-level performance on imagenet classification},
-  author={He, Kaiming and Zhang, Xiangyu and Ren, Shaoqing and Sun, Jian},
-  journal={arXiv preprint arXiv:1502.01852},
-  year={2015}
-}
-@inproceedings{mikolov2010recurrent,
-  title={Recurrent neural network based language model.},
-  author={Mikolov, Tomas and Karafi{\'a}t, Martin and Burget, Lukas and Cernock{\`y}, Jan and Khudanpur, Sanjeev},
-  booktitle={INTERSPEECH 2010, 11th Annual Conference of the International Speech Communication Association, Makuhari, Chiba, Japan, September 26-30, 2010},
-  pages={1045--1048},
-  year={2010}
-}
+
 @MISC{Bastien-Theano-2012,
         author = {Bastien, Fr{\'{e}}d{\'{e}}ric and Lamblin, Pascal and Pascanu, Razvan and Bergstra, James and Goodfellow, Ian J. and Bergeron, Arnaud and Bouchard, Nicolas and Bengio, Yoshua},
          title = {Theano: new features and speed improvements},
@@ -154,6 +140,7 @@ benchmarks demonstrating Theano’s performance relative to Torch7, a recently
 introduced machine learning library, and to RNNLM, a C++ library targeted at
 recurrent neural networks.}
 }
+
 @INPROCEEDINGS{bergstra+al:2010-scipy,
      author = {Bergstra, James and Breuleux, Olivier and Bastien, Fr{\'{e}}d{\'{e}}ric and Lamblin, Pascal and Pascanu, Razvan and Desjardins, Guillaume and Turian, Joseph and Warde-Farley, David and Bengio, Yoshua},
       month = jun,
@@ -181,32 +168,6 @@ CPU and between 6.5× and 44× faster when compiled for the GPU. This paper illu
  publisher = {Association for Computational Linguistics},
  address = {Stroudsburg, PA, USA},
 } 
-
-@InProceedings{SayeedEtAl2015,
-  author = 	 {Asad Sayeed and Stefan Fischer and Vera Demberg},
-  title = 	 {Vector-space calculation of semantic surprisal for predicting word pronunciation duration},
- year = {2015},
- location = {Beijing, China},
- publisher = {Association for Computational Linguistics},
- address = {Stroudsburg, PA, USA},
-booktitle={Proceedings of the 53rd Annual Meeting of the Association for Computational Linguistics},
-
-  OPTcrossref =  {},
-  OPTkey = 	 {},
-  OPTbooktitle = {},
-  OPTpages = 	 {},
-  OPTyear = 	 {},
-  OPTeditor = 	 {},
-  OPTvolume = 	 {},
-  OPTnumber = 	 {},
-  OPTseries = 	 {},
-  OPTaddress = 	 {},
-  OPTmonth = 	 {},
-  OPTorganization = {},
-  OPTpublisher = {},
-  OPTnote = 	 {},
-  OPTannote = 	 {}
-}
 
 @article{Binder2001,
    title={The effects of thematic fit and discourse context on syntactic 
