--- a/main.tex
+++ b/main.tex
@@ -42,6 +42,43 @@ Your introduction goes here! Some examples of commonly used commands and feature
 
 
 
+\section{Related Works}
+
+\subsection{Representation Learning}
+
+Words can be represented with vectors in adjacent matrix using count based method. But when it comes to the practice, this kind of method has a problem of sparsity. The vector of count-based method is discrete, high-dimensional and sparse. Distributed representation is an effective method to tackle sparsity of high-dimensional vectors. \\
+\noindent
+\citet{mikolov2013distributed} proposed recurrent neural network based language model.
+
+\subsection{Semantic Role Labeling}
+There are many state-of-the-art SRL systems \citep{collobert2011natural, titov2011bayesian}. \citet{roth2016neural} proposed PathLSTM which made use of syntactic features. But \citet{marcheggiani2017simple} claimed that syntactic features is not necessary for semantic role labeling.
+
+\subsection{Cognitive Modelling}
+\subsubsection{Event Level Model}
+Event-level knowledge does affect human expectations for verbal arguments \citep{baroni2010distributional}. \\
+\noindent 
+Regarding to models of events, \citet{tilk-EtAl:2016:EMNLP2016} proposed two models: \textit{non-incremental model} and \textit{incremental model}. For the \textit{non-incremental model}, they simply summed all the vectors $p$ of event participants together to represent the event $e$ as a vector:
+\begin{equation} \label{eq:20}
+\begin{aligned}
+    \mathbf{e}
+        &= \sum_{l=1}^{L} \mathbf{p}_{l} \\
+\end{aligned}
+\end{equation}
+where $L$ is the number of participants in event $e$. \\
+\noindent
+When it comes to the \textit{incremental model}, they added a recurrent unit to express participant order not only within event but also across different events. Moreover, a binary indicator $b$ is used to detect the event boundaries. $b$ equals to $1$ if the target word belongs to current event, otherwise $0$. So the event representation vector is: 
+\begin{equation} \label{eq:21}
+\begin{aligned}
+    \mathbf{e}
+        &= \mathbf{p} + \mathbf{h_{t-1}}\mathbf{W}_h + b\mathbf{v}
+\end{aligned}
+\end{equation} 
+where $\mathbf{v}$ is the parameter vector of event boundary. $\mathbf{h_{t-1}}$ is the hidden vector of last time step in the recurrent unit. $\mathbf{W}_h$ is the parameter matrix of recurrent unit. 
+
+\subsubsection{Thematic Fit Evaluation}
+\citet{sayeed2014combining} 
+Extract thematic features using semantic role labeler SENNA \citep{collobert2011natural}.
+Construct distributional memory model. 
 
 
 
