feat: add other related works

--- a/mtrf.bib
+++ b/mtrf.bib
@@ -1,4 +1,447 @@
 ------------------------
+papers in the group
+------------------------
+@InProceedings{tilk2016event,
+  author    = {Tilk, Ottokar  and  Demberg, Vera  and  Sayeed, Asad  and  Klakow, Dietrich  and  Thater, Stefan},
+  title     = {Event participant modelling with neural networks},
+  booktitle = {Proceedings of the 2016 Conference on Empirical Methods in Natural Language Processing},
+  month     = {November},
+  year      = {2016},
+  address   = {Austin, Texas},
+  publisher = {Association for Computational Linguistics},
+  pages     = {171--182},
+  url       = {https://aclweb.org/anthology/D16-1017}
+}
+
+@InProceedings{sayeed2016thematic,
+  author    = {Sayeed, Asad  and  Greenberg, Clayton  and  Demberg, Vera},
+  title     = {Thematic fit evaluation: an aspect of selectional preferences},
+  booktitle = {Proceedings of the 1st Workshop on Evaluating Vector-Space Representations for NLP},
+  month     = {August},
+  year      = {2016},
+  address   = {Berlin, Germany},
+  publisher = {Association for Computational Linguistics},
+  pages     = {99--105},
+  url       = {http://anthology.aclweb.org/W16-2518}
+}
+
+@InProceedings{sayeed2016roleo,
+  author    = {Sayeed, Asad  and  Hong, Xudong  and  Demberg, Vera},
+  title     = {Roleo: Visualising Thematic Fit Spaces on the Web},
+  booktitle = {Proceedings of ACL-2016 System Demonstrations},
+  month     = {August},
+  year      = {2016},
+  address   = {Berlin, Germany},
+  publisher = {Association for Computational Linguistics},
+  pages     = {139--144},
+  url       = {http://anthology.aclweb.org/P16-4024}
+}
+
+@InProceedings{greenberg2015improving,
+  author    = {Greenberg, Clayton  and  Sayeed, Asad  and  Demberg, Vera},
+  title     = {Improving unsupervised vector-space thematic fit evaluation via role-filler prototype clustering},
+  booktitle = {Proceedings of the 2015 Conference of the North American Chapter of the Association for Computational Linguistics: Human Language Technologies},
+  month     = {May--June},
+  year      = {2015},
+  address   = {Denver, Colorado},
+  publisher = {Association for Computational Linguistics},
+  pages     = {21--31},
+  url       = {http://www.aclweb.org/anthology/N15-1003}
+}
+
+@InProceedings{greenberg2015verb,
+  author    = {Greenberg, Clayton  and  Demberg, Vera  and  Sayeed, Asad},
+  title     = {Verb polysemy and frequency effects in thematic fit modeling},
+  booktitle = {Proceedings of the 6th Workshop on Cognitive Modeling and Computational Linguistics},
+  month     = {June},
+  year      = {2015},
+  address   = {Denver, Colorado},
+  publisher = {Association for Computational Linguistics},
+  pages     = {48--57},
+  url       = {http://www.aclweb.org/anthology/W15-1106}
+}
+
+@InProceedings{SayeedEtAl2015,
+  author    = {Sayeed, Asad  and  Fischer, Stefan  and  Demberg, Vera},
+  title     = {Vector-space calculation of semantic surprisal for predicting word pronunciation duration},
+  booktitle = {Proceedings of the 53rd Annual Meeting of the Association for Computational Linguistics and the 7th International Joint Conference on Natural Language Processing (Volume 1: Long Papers)},
+  month     = {July},
+  year      = {2015},
+  address   = {Beijing, China},
+  publisher = {Association for Computational Linguistics},
+  pages     = {763--773},
+  url       = {http://www.aclweb.org/anthology/P15-1074}
+}
+
+@article{sayeed2015exploration,
+  title={An exploration of semantic features in an unsupervised thematic fit evaluation framework},
+  author={Sayeed, Asad and Demberg, Vera and Shkadzko, Pavel},
+  journal={Italian Journal of Computational Linguistics},
+  volume={1},
+  number={1},
+  year={2015}
+}
+
+@InProceedings{sayeed2014combining,
+  title={Combining unsupervised syntactic and semantic models of thematic fit},
+  author={Sayeed, Asad and Demberg, Vera},
+  booktitle={Proceedings of the first Italian Conference on Computational Linguistics (CLiC-it 2014)},
+  year={2014}
+}
+
+
+------------------------
+papers in Saarland
+------------------------
+@article{modi2017modeling,
+  author = {Modi, Ashutosh  and Titov, Ivan  and Demberg, Vera  and Sayeed, Asad  and Pinkal, Manfred },
+  title = {Modelling Semantic Expectation: Using Script Knowledge for Referent Prediction},
+  journal = {Transactions of the Association for Computational Linguistics},
+  volume = {5},
+  year = {2017},
+  keywords = {},
+  abstract = {Recent research in psycholinguistics has provided increasing evidence that humans predict upcoming content. Prediction also affects perception and might be a key to robustness in human language processing. In this paper, we investigate the factors that affect human prediction by building a computational model that can predict upcoming discourse referents based on linguistic knowledge alone vs. linguistic knowledge jointly with common-sense knowledge in the form of scripts. We find that script knowledge significantly improves model estimates of human predictions. In a second study, we test the highly controversial hypothesis that predictability influences referring expression type but do not find evidence for such an effect.},
+  issn = {2307-387X},
+  url = {https://transacl.org/ojs/index.php/tacl/article/view/968},
+  pages = {31--44}
+}
+
+@InProceedings{roth2016neural,
+  author    = {Roth, Michael  and  Lapata, Mirella},
+  title     = {Neural Semantic Role Labeling with Dependency Path Embeddings},
+  booktitle = {Proceedings of the 54th Annual Meeting of the Association for Computational Linguistics (Volume 1: Long Papers)},
+  month     = {August},
+  year      = {2016},
+  address   = {Berlin, Germany},
+  publisher = {Association for Computational Linguistics},
+  pages     = {1192--1202},
+  url       = {http://www.aclweb.org/anthology/P16-1113}
+}
+
+
+------------------------
+paper
+------------------------
+@inproceedings{mikolov2010recurrent,
+  title={Recurrent neural network based language model.},
+  author={Mikolov, Tomas and Karafi{\'a}t, Martin and Burget, Lukas and Cernock{\`y}, Jan and Khudanpur, Sanjeev},
+  booktitle={Interspeech},
+  volume={2},
+  pages={3},
+  year={2010}
+}
+
+@inproceedings{le2014distributed,
+  title={Distributed representations of sentences and documents},
+  author={Le, Quoc and Mikolov, Tomas},
+  booktitle={Proceedings of the 31st International Conference on Machine Learning (ICML-14)},
+  pages={1188--1196},
+  year={2014}
+}
+
+@article{collobert2011natural,
+  title={Natural language processing (almost) from scratch},
+  author={Collobert, Ronan and Weston, Jason and Bottou, L{\'e}on and Karlen, Michael and Kavukcuoglu, Koray and Kuksa, Pavel},
+  journal={Journal of Machine Learning Research},
+  volume={12},
+  number={Aug},
+  pages={2493--2537},
+  year={2011}
+}
+
+@inproceedings{titov2011bayesian,
+  title={A Bayesian model for unsupervised semantic parsing},
+  author={Titov, Ivan and Klementiev, Alexandre},
+  booktitle={Proceedings of the 49th Annual Meeting of the Association for Computational Linguistics: Human Language Technologies-Volume 1},
+  pages={1445--1455},
+  year={2011},
+  organization={Association for Computational Linguistics}
+}
+
+@article{marcheggiani2017simple,
+  title={A simple and accurate syntax-agnostic neural model for dependency-based semantic role labeling},
+  author={Marcheggiani, Diego and Frolov, Anton and Titov, Ivan},
+  journal={arXiv preprint arXiv:1701.02593},
+  year={2017}
+}
+
+
+------------------------
+to read
+------------------------
+@article{lapesa2017large,
+  title={Large-scale evaluation of dependency-based DSMs: Are they worth the effort?},
+  author={Lapesa, Gabriella and Evert, Stefan},
+  journal={EACL 2017},
+  pages={394},
+  year={2017}
+}
+
+
+------------------------
+Event
+------------------------
+@article{davidson1967logical,
+  title={The logical form of action sentences},
+  author={Davidson, Donald},
+  year={1967}
+}
+
+@article{tenny2000history,
+  title={A history of events in linguistic theory},
+  author={Tenny, Carol and Pustejovsky, James},
+  journal={Events as grammatical objects},
+  volume={32},
+  pages={3--37},
+  year={2000},
+  publisher={Stanford: CSLI Publications}
+}
+
+@article{hare2009activating,
+  title={Activating event knowledge},
+  author={Hare, Mary and Jones, Michael and Thomson, Caroline and Kelly, Sarah and McRae, Ken},
+  journal={Cognition},
+  volume={111},
+  number={2},
+  pages={151--167},
+  year={2009},
+  publisher={Elsevier}
+}
+
+@article{bicknell2010effects,
+  title={Effects of event knowledge in processing verbal arguments},
+  author={Bicknell, Klinton and Elman, Jeffrey L and Hare, Mary and McRae, Ken and Kutas, Marta},
+  journal={Journal of memory and language},
+  volume={63},
+  number={4},
+  pages={489--505},
+  year={2010},
+  publisher={Elsevier}
+}
+
+@inproceedings{barbu2016event,
+  title={Event participants and linguistic arguments},
+  author={Barbu, Roxana-Maria and Toivonen, Ida},
+  booktitle={Proceedings of the 38th Annual Meeting of the Cognitive Science Society},
+  year={2016}
+}
+
+
+------------------------
+Semantic roles
+------------------------
+@article{fillmore1968case,
+  title={The case for case.},
+  author={Fillmore, C. J.},
+  journal={Universals in Linguistic Theory},
+  pages={1--25(Part Two)},
+  editor={Bach, E. W. and Harms, R. T.},
+  publisher={Holt and Rinehart and Winston},
+  year={1968}
+}
+
+@article{palmer2005proposition,
+  title={The proposition bank: An annotated corpus of semantic roles},
+  author={Palmer, Martha and Gildea, Daniel and Kingsbury, Paul},
+  journal={Computational linguistics},
+  volume={31},
+  number={1},
+  pages={71--106},
+  year={2005},
+  publisher={MIT Press}
+}
+
+@book{aarts2013english,
+  title={English syntax and argumentation},
+  author={Aarts, Bas},
+  year={2013},
+  publisher={Palgrave Macmillan}
+}
+
+
+------------------------
+DM
+------------------------
+@article{baroni2010distributional,
+  title={Distributional memory: A general framework for corpus-based semantics},
+  author={Baroni, Marco and Lenci, Alessandro},
+  journal={Computational Linguistics},
+  volume={36},
+  number={4},
+  pages={673--721},
+  year={2010},
+  publisher={MIT Press}
+}
+
+
+@inproceedings{santus2017measuring,
+  author    = {Santus, Enrico  and  Chersoni, Emmanuele  and  Lenci, Alessandro  and  Blache, Philippe},
+  title     = {Measuring Thematic Fit with Distributional Feature Overlap},
+  booktitle = {Proceedings of the 2017 Conference on Empirical Methods in Natural Language Processing},
+  month     = {September},
+  year      = {2017},
+  address   = {Copenhagen, Denmark},
+  publisher = {Association for Computational Linguistics},
+  pages     = {659--669},
+  url       = {https://www.aclweb.org/anthology/D17-1069}
+}
+
+
+
+------------------------
+Embedding
+------------------------
+@inproceedings{mikolov2013linguistic,
+  title={Linguistic regularities in continuous space word representations.},
+  author={Mikolov, Tomas and Yih, Wen-tau and Zweig, Geoffrey},
+  booktitle={hlt-Naacl},
+  volume={13},
+  pages={746--751},
+  year={2013}
+}
+
+@article{mikolov2013efficient,
+  title={Efficient estimation of word representations in vector space},
+  author={Mikolov, Tomas and Chen, Kai and Corrado, Greg and Dean, Jeffrey},
+  journal={arXiv preprint arXiv:1301.3781},
+  year={2013}
+}
+
+@inproceedings{mikolov2013distributed,
+  title={Distributed representations of words and phrases and their compositionality},
+  author={Mikolov, Tomas and Sutskever, Ilya and Chen, Kai and Corrado, Greg S and Dean, Jeff},
+  booktitle={Advances in neural information processing systems},
+  pages={3111--3119},
+  year={2013}
+}
+
+
+------------------------
+Maths
+------------------------
+@article{hitchcock1927expression,
+  title={The expression of a tensor or a polyadic as a sum of products},
+  author={Hitchcock, Frank L},
+  journal={Studies in Applied Mathematics},
+  volume={6},
+  number={1-4},
+  pages={164--189},
+  year={1927},
+  publisher={Wiley Online Library}
+}
+
+
+------------------------
+NN
+------------------------
+@inproceedings{socher2013recursive,
+  title={Recursive deep models for semantic compositionality over a sentiment treebank},
+  author={Socher, Richard and Perelygin, Alex and Wu, Jean Y and Chuang, Jason and Manning, Christopher D and Ng, Andrew Y and Potts, Christopher and others},
+  booktitle={Proceedings of the conference on empirical methods in natural language processing (EMNLP)},
+  volume={1631},
+  pages={1642},
+  year={2013},
+  organization={Citeseer}
+}
+
+@article{chung2014empirical,
+  title={Empirical evaluation of gated recurrent neural networks on sequence modeling},
+  author={Chung, Junyoung and Gulcehre, Caglar and Cho, KyungHyun and Bengio, Yoshua},
+  journal={arXiv preprint arXiv:1412.3555},
+  year={2014}
+}
+
+@article{hochreiter1997LSTM,
+  title={Long short-term memory},
+  author={Hochreiter, Sepp and Schmidhuber, J{\"u}rgen},
+  journal={Neural computation},
+  volume={9},
+  number={8},
+  pages={1735--1780},
+  year={1997},
+  publisher={MIT Press}
+}
+
+@inproceedings{he2015delving,
+  title={Delving deep into rectifiers: Surpassing human-level performance on imagenet classification},
+  author={He, Kaiming and Zhang, Xiangyu and Ren, Shaoqing and Sun, Jian},
+  booktitle={Proceedings of the IEEE international conference on computer vision},
+  pages={1026--1034},
+  year={2015}
+}
+
+
+
+------------------------
+book
+------------------------
+@incollection{caruana1998multitask,
+  title={Multitask learning},
+  author={Caruana, Rich},
+  booktitle={Learning to learn},
+  pages={95--133},
+  year={1998},
+  publisher={Springer}
+}
+
+@book{jurafsky2014speech,
+  title={Speech and language processing},
+  author={Jurafsky, Dan and Martin, James H},
+  volume={3},
+  year={2014},
+  publisher={Pearson London}
+}
+
+@book{Goodfellow-et-al-2016,
+    title={Deep Learning},
+    author={Ian Goodfellow and Yoshua Bengio and Aaron Courville},
+    publisher={MIT Press},
+    note={\url{http://www.deeplearningbook.org}},
+    year={2016}
+}
+
+
+------------------------
+Evaluation
+------------------------
+@article{grefenstette2015concrete,
+  title={Concrete models and empirical evaluations for the categorical compositional distributional model of meaning},
+  author={Grefenstette, Edward and Sadrzadeh, Mehrnoosh},
+  journal={Computational Linguistics},
+  year={2015},
+  publisher={MIT Press}
+}
+
+
+------------------------
+software
+------------------------
+@inproceedings{nivre2006maltparser,
+  title={Maltparser: A data-driven parser-generator for dependency parsing},
+  author={Nivre, Joakim and Hall, Johan and Nilsson, Jens},
+  booktitle={Proceedings of LREC},
+  volume={6},
+  pages={2216--2219},
+  year={2006}
+}
+
+@inproceedings{abadi2016tensorflow,
+  title={TensorFlow: A System for Large-Scale Machine Learning.},
+  author={Abadi, Mart{\'\i}n and Barham, Paul and Chen, Jianmin and Chen, Zhifeng and Davis, Andy and Dean, Jeffrey and Devin, Matthieu and Ghemawat, Sanjay and Irving, Geoffrey and Isard, Michael and others},
+  booktitle={OSDI},
+  volume={16},
+  pages={265--283},
+  year={2016}
+}
+
+@misc{chollet2015keras,
+  title={Keras},
+  author={Chollet, Fran{\c{c}}ois and others},
+  year={2015}
+}
+
+
+------------------------
 Roleo 2016
 ------------------------
 
@@ -39,14 +482,7 @@ Roleo 2016
   publisher={MIT Press}
 }
 
-@article{hitchcock1927expression,
-  title={The expression of a tensor or a polyadic as a sum of products},
-  journal={Journal of Mathematics and Physics},
-  author={Hitchcock, Frank Lauren},
-  year={1927},
-  number={6},
-  pages={164–-189}
-}
+
 
 @inproceedings{chelba1998exploiting,
   title={Exploiting syntactic structure for language modeling},
